tests/algorithms/transpiler/FS/graphs/tests/test_min_spanning_tree_prim.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/tests/test_min_spanning_tree_prim.fs(73,56): error FS0039: The field, constructor or member 'Keys' is not defined
